--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img src="/images/flag-css-project.png" class="card-img-top" alt="Flag project">
           <div class="card-body">
             <p class="card-text">Pure CSS flag design project.</p>
-            <a href="#" class="btn btn-sm text-white" style="background-color:#3B5998;">View</a>
+            <a href="https://koech000.github.io/kenyan-flag/" class="btn btn-sm text-white" style="background-color:#3B5998;">View</a>
           </div>
         </div>
       </div>
